vscode: Set titleBarStyle to custom

--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -60,6 +60,7 @@
     "tslint.packageManager": "yarn",
 
     "window.nativeTabs": true,
+    "window.titleBarStyle": "custom",
     "window.zoomLevel": 0,
 
     "workbench.colorCustomizations": {
