--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -28,6 +28,7 @@ set -gw mode-style fg=white,bg=colour238
 # Status bar
 set -g status on
 set -g status-interval 5
+set -g status-style bg=colour234
 
 # Left status
 set -g status-left-length 70
@@ -41,12 +42,7 @@ set -g status-right-length 48
 set -g status-right "#[fg=colour15] %Y-%m-%d %a %H:%M #[default]"
 
 # Message colours
-set -gw message-style fg=black,bg=white
-
-# Status colours
-set -g status-fg white
-set -g status-bg black
-set -g status-style none
+set -gw message-style fg=black,bg=colour246,bold
 
 # Pane colours
 set -g pane-border-style fg=colour235
