vscode: Revert update to use gopls

--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -32,9 +32,9 @@
     "git.autofetch": true,
 
     "go.formatTool": "goimports",
-    "go.languageServerExperimentalFeatures": {
-        "diagnostics": true
-    },
+    //"go.languageServerExperimentalFeatures": {
+    //    "diagnostics": true
+    //},
     "go.lintFlags": [
         "--vendor",
         "--disable-all",
@@ -46,12 +46,12 @@
         "--enable=deadcode"
     ],
     "go.lintTool": "gometalinter",
-    "go.useLanguageServer": true,
+    //"go.useLanguageServer": true,
 
-    "gopls": {
-        "usePlaceholders": true,
-        "enhancedHover": true
-    },
+    //"gopls": {
+    //    "usePlaceholders": true,
+    //    "enhancedHover": true
+    //},
 
     "rust.build_on_save": true,
     "rust.clippy_preference": "on",
@@ -80,10 +80,10 @@
     "workbench.statusBar.feedback.visible": false,
 
     "[go]": {
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": true
-        },
-        "editor.formatOnSave": true,
+        //"editor.codeActionsOnSave": {
+        //    "source.organizeImports": true
+        //},
+        //"editor.formatOnSave": true,
         "editor.snippetSuggestions": "none",
         "editor.tabSize": 8
     },
