--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -2,7 +2,6 @@
     "breadcrumbs.enabled": false,
 
     "editor.fontFamily": "'Source Code Pro', 'Ubuntu Mono', Menlo, Monaco, 'Courier New', monospace",
-    "editor.fontLigatures": false,
     "editor.fontSize": 15,
     "editor.minimap.enabled": false,
     "editor.minimap.renderCharacters": false,
@@ -13,6 +12,14 @@
         80
     ],
 
+    "eslint.autoFixOnSave": true,
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        { "language": "typescript", "autoFix":  true },
+        { "language": "typescriptreact", "autoFix":  true },
+    ],
+
     "files.exclude":{
         "**/.git": true,
         "**/.svn": true,
@@ -20,42 +27,36 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/*.coverprofile": true,
-        "**/*.out": true
+        "**/*.out": true,
     },
     "files.watcherExclude":{
         "**/.git/objects/**": true,
         "**/.git/subtree-cache/**": true,
         "**/node_modules/**": true,
-        "**/vendor/**": true
+        "**/vendor/**": true,
     },
 
     "git.autofetch": true,
 
+    "go.alternateTools": {
+        "golangci-lint": "/Users/ryanfowler/go/bin/golangci-lint",
+    },
+    "go.buildTags": "-mod=vendor",
     "go.formatTool": "goimports",
-    //"go.languageServerExperimentalFeatures": {
-    //    "diagnostics": true,
-    //    "format": true,
-    //    "autoComplete": true
-    //},
     "go.lintFlags": [
         "--fast",
     ],
     "go.lintTool": "golangci-lint",
-    //"go.useLanguageServer": true,
-
-    //"gopls": {
-    //    "usePlaceholders": true,
-    //    "enhancedHover": true
-    //},
+    "go.useLanguageServer": true,
 
     "rust.build_on_save": true,
     "rust.clippy_preference": "on",
     "rust-client.channel": "stable",
 
     "search.exclude": {
-        "**/node_modules": true,
         "**/bower_components": true,
-        "**/vendor": true
+        "**/node_modules": true,
+        "**/vendor": true,
     },
 
     "telemetry.enableTelemetry": false,
@@ -63,33 +64,18 @@
     "terminal.integrated.fontSize": 16,
     "terminal.integrated.lineHeight": 1.2,
 
-    "tslint.packageManager": "yarn",
-
     "window.nativeTabs": true,
     "window.titleBarStyle": "custom",
     "window.zoomLevel": 0,
 
     "workbench.colorCustomizations": {
-        "statusBar.background": "#1A1A1A"
+        "statusBar.background": "#1A1A1A",
     },
-    "workbench.statusBar.feedback.visible": false,
 
     "[go]": {
-        //"editor.codeActionsOnSave": {
-        //    "source.organizeImports": true
-        //},
-        //"editor.formatOnSave": true,
-        //"editor.snippetSuggestions": "none",
-        "editor.tabSize": 8
-    },
-    "[javascript]": {
-        "editor.formatOnSave": true
+        "editor.tabSize": 8,
     },
     "[rust]": {
-        "editor.formatOnSave": true
-    },
-    "[typescript]": {
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
 }
