--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -14,6 +14,7 @@
 
     "eslint.autoFixOnSave": true,
     "eslint.packageManager": "yarn",
+    "eslint.run": "onSave",
     "eslint.validate": [
         "javascript",
         "javascriptreact",
