vscode: Fix typo in a gopls setting

--- a/applications/vscode/settings.json
+++ b/applications/vscode/settings.json
@@ -46,7 +46,7 @@
     "go.vetOnSave": "off",
 
     "gopls": {
-        "staticheck": false,
+        "staticcheck": false,
         "usePlaceholders": true,
     },
 
