Update tmux configuration

--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -2,10 +2,14 @@
 #
 # Ryan Fowler
 
+# Display
+set -gw automatic-rename on
+set -g renumber-windows on
+set -g set-titles on
 
 # Activity notification
 set -gw monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 set -g display-time 2000
 
 # Reload config
