--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -7,6 +7,9 @@ set -gw automatic-rename on
 set -g renumber-windows on
 set -g set-titles on
 
+# For helix editor
+set -sg escape-time 0
+
 # Activity notification
 set -gw monitor-activity on
 set -g visual-activity off
