--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -9,6 +9,7 @@ set -g set-titles on
 
 # For helix editor
 set -sg escape-time 0
+set -g default-terminal "tmux"
 
 # Activity notification
 set -gw monitor-activity on
