tmux: Fixes for alacritty

--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -9,7 +9,8 @@ set -g set-titles on
 
 # For helix editor
 set -sg escape-time 0
-set -g default-terminal "tmux"
+set -g default-terminal "tmux-256color"
+set-option -a terminal-overrides ",alacritty:RGB"
 
 # Activity notification
 set -gw monitor-activity on
