--- a/applications/helix/languages.toml
+++ b/applications/helix/languages.toml
@@ -1,6 +1,7 @@
 [[language]]
 name = "go"
 indent = { tab-width = 8, unit = "\t" }
+formatter = { command = "goimports" }
 
 [[language]]
 name = "rust"
