tmux: Update style

--- a/applications/tmux/.tmux.conf
+++ b/applications/tmux/.tmux.conf
@@ -13,12 +13,15 @@ set -g default-terminal "tmux-256color"
 set-option -a terminal-overrides ",alacritty:RGB"
 
 # Activity notification
-set -gw monitor-activity on
+set -gw monitor-activity off
+set -g visual-bell off
+set -g visual-silence off
 set -g visual-activity off
+set -g bell-action none
 set -g display-time 2000
 
 # Reload config
-bind r source-file ~/.tmux.conf \; display "Config reloaded."
+bind r source-file ~/.tmux.conf \; display " Config reloaded."
 
 # Set scrollback limit
 set -g history-limit 10000
@@ -38,17 +41,20 @@ set -gw mode-style fg=white,bg=colour238
 set -g status on
 set -g status-interval 5
 set -g status-style bg=colour232
+set -g status-justify left
+setw -g window-status-current-style "fg=colour253 bg=colour238 bold"
+setw -g window-status-current-format " #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F "
+setw -g window-status-style "fg=colour247 bg=colour232"
+setw -g window-status-format " #I#[fg=colour249]:#[fg=colour252]#W#[fg=colour249]#F "
 
 # Left status
 set -g status-left-length 70
 set -g status-left "#[fg=colour246]#(whoami)"
 set -ga status-left "#[fg=colour250,bold] » #[default]"
-set -ga status-left "#[fg=colour246]#S"
-set -ga status-left "#[fg=colour250,bold] » #[default]"
 
 # Right status
 set -g status-right-length 48
-set -g status-right "#[fg=colour15] %Y-%m-%d %a %H:%M #[default]"
+set -g status-right "#[fg=colour233,bg=colour243] %d/%m #[fg=colour233,bg=colour246] %H:%M "
 
 # Message colours
 set -gw message-style fg=black,bg=colour246,bold
