Rewrite in Rust

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,31 @@
 name: Continuous Integration
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
+env:
+  RUST_VERSION: "1.70.0"
+
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
-    - name: install
-      run: npm install
-    - name: lint
-      run: npx eslint lib --ext .ts
-    - name: install-dotfiles
-      run: ./install.sh
+
+    - name: Setup Rust
+      uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ env.RUST_VERSION }}
+        components: clippy, rustfmt
+
+    - name: Format
+      run: cargo fmt --all -- --check
+
+    - name: Clippy
+      run: cargo clippy -- -D warnings
+
+    - name: Test
+      run: cargo test
