--- a/data/helix/config.toml
+++ b/data/helix/config.toml
@@ -4,6 +4,9 @@ theme = "default"
 rulers = [80]
 true-color = true
 
+[editor.cursor-shape]
+insert = "bar"
+
 [editor.file-picker]
 hidden = false
 
