--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 anyhow = { version = "1.0.71" }
 serde = { version = "1.0.167", features = ["derive"] }
 serde_yaml = { version = "0.9.22" }
+termcolor = { version = "1.2.0" }
