config: Add ruff and ruff-lsp homebrew formulae

--- a/config.yaml
+++ b/config.yaml
@@ -23,6 +23,8 @@ homebrew:
     - parallel
     - protobuf
     - ripgrep
+    - ruff
+    - ruff-lsp
     - rust-analyzer
     - shellcheck
     - sqlite
