tmux: Open panes in the current directory

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -23,6 +23,10 @@ set -g display-time 2000
 # Reload config
 bind r source-file ~/.tmux.conf \; display " Config reloaded."
 
+# Open panes in the current directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Set scrollback limit
 set -g history-limit 10000
 
