--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -9,7 +9,7 @@ set -g set-titles on
 
 # For helix editor
 set -sg escape-time 0
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set-option -a terminal-overrides ",alacritty:RGB"
 
 # Activity notification
