--- a/config.yaml
+++ b/config.yaml
@@ -84,6 +84,10 @@ rules:
       linux: "$HOME/.config/Code/User/settings.json"
       macos: "$HOME/Library/Application Support/Code/User/settings.json"
 
+  # zed
+  - src: "data/zed/settings.json"
+    dst: "$HOME/.config/zed/settings.json"
+
   # zsh
   - src: "data/zsh/.zshrc"
     dst: "$HOME/.zshrc"
