--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -1,16 +1,25 @@
 {
   "buffer_font_family": "Monaspace Neon",
-  "buffer_font_size": 15,
+  "buffer_font_size": 14,
   "cursor_blink": false,
   "language_overrides": {
     "Go": {
       "tab_size": 8
     }
   },
+  "lsp": {
+    "rust-analyzer": {
+      "initialization_options": {
+        "checkOnSave": {
+          "command": "clippy"
+        }
+      }
+    }
+  },
   "show_whitespaces": "all",
   "telemetry": {
     "diagnostics": true
   },
-  "ui_font_size": 16,
+  "ui_font_size": 14,
   "vim_mode": true
 }
