--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -20,6 +20,7 @@
   "telemetry": {
     "diagnostics": true
   },
-  "ui_font_size": 14,
+  "ui_font_family": "Monaspace Neon",
+  "ui_font_size": 15,
   "vim_mode": true
 }
