--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -26,5 +26,6 @@
   },
   "ui_font_family": "Monaspace Neon",
   "ui_font_size": 15,
-  "vim_mode": true
+  "vim_mode": true,
+  "wrap_guides": [80]
 }
