tmux: update theme

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -3,9 +3,10 @@
 # Ryan Fowler
 
 # Display
-set -gw automatic-rename on
+set -g automatic-rename on
 set -g renumber-windows on
 set -g set-titles on
+set -g automatic-rename-format '#{b:pane_current_path}'
 
 # For helix editor
 set -sg escape-time 0
@@ -18,7 +19,7 @@ set -g visual-bell off
 set -g visual-silence off
 set -g visual-activity off
 set -g bell-action none
-set -g display-time 2000
+set -g display-time 1000
 
 # Reload config
 bind r source-file ~/.tmux.conf \; display " Config reloaded."
@@ -46,19 +47,17 @@ set -g status on
 set -g status-interval 5
 set -g status-style bg=colour232
 set -g status-justify left
-setw -g window-status-current-style "fg=colour253 bg=colour238 bold"
-setw -g window-status-current-format " #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F "
-setw -g window-status-style "fg=colour247 bg=colour232"
-setw -g window-status-format " #I#[fg=colour249]:#[fg=colour252]#W#[fg=colour249]#F "
+set -g status-position top
+setw -g window-status-current-format "#[fg=colour233,bg=colour249] #I #[fg=colour249,bg=colour232] #[fg=colour255]#W "
+setw -g window-status-format "#[fg=colour253,bg=colour239] #I #[fg=colour252,bg=colour232] #W "
 
 # Left status
 set -g status-left-length 70
-set -g status-left "#[fg=colour246]#(whoami)"
-set -ga status-left "#[fg=colour250,bold] » #[default]"
+set -g status-left "#[default]"
 
 # Right status
 set -g status-right-length 48
-set -g status-right "#[fg=colour233,bg=colour243] %d/%m #[fg=colour233,bg=colour246] %H:%M "
+set -g status-right "#[fg=colour252]#{pane_current_command}  #[fg=colour233,bg=colour243] %d/%m #[fg=colour233,bg=colour246] %H:%M "
 
 # Message colours
 set -gw message-style fg=black,bg=colour246,bold
