tmux: allow pane movement with vim keybindings

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -21,6 +21,12 @@ set -g visual-activity off
 set -g bell-action none
 set -g display-time 1000
 
+# Remap pane movement
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # Reload config
 bind r source-file ~/.tmux.conf \; display " Config reloaded."
 
