tmux: move status bar to the bottom

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -10,7 +10,7 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 
 # For helix editor
 set -sg escape-time 0
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set-option -a terminal-overrides ",alacritty:RGB"
 
 # Activity notification
@@ -53,7 +53,7 @@ set -g status on
 set -g status-interval 5
 set -g status-style bg=colour232
 set -g status-justify left
-set -g status-position top
+set -g status-position bottom
 setw -g window-status-current-format "#[fg=colour233,bg=colour249] #I #[fg=colour249,bg=colour232] #[fg=colour255]#W "
 setw -g window-status-format "#[fg=colour253,bg=colour239] #I #[fg=colour252,bg=colour232] #W "
 
@@ -63,7 +63,7 @@ set -g status-left "#[default]"
 
 # Right status
 set -g status-right-length 48
-set -g status-right "#[fg=colour252]#{pane_current_command}  #[fg=colour233,bg=colour243] %d/%m #[fg=colour233,bg=colour246] %H:%M "
+set -g status-right "#[fg=colour255]#{pane_current_command}  #[fg=colour232,bg=colour243] %d/%m #[fg=colour232,bg=colour246] %H:%M "
 
 # Message colours
 set -gw message-style fg=black,bg=colour246,bold
