--- a/data/helix/languages.toml
+++ b/data/helix/languages.toml
@@ -3,6 +3,9 @@ name = "go"
 indent = { tab-width = 8, unit = "\t" }
 formatter = { command = "goimports" }
 
+[[language-server.gopls.config]]
+buildFlags = { buildFlags = ["-tags=integration"] }
+
 [[language-server.rust-analyzer.config.check]]
 command = "clippy"
 
