zed: add build tags to gopls configuration

--- a/data/zed/settings.json
+++ b/data/zed/settings.json
@@ -8,6 +8,11 @@
     }
   },
   "lsp": {
+    // "gopls": {
+    //   "initialization_options": {
+    //     "buildFlags": ["-tags=sandbox,integration"]
+    //   }
+    // },
     "rust-analyzer": {
       "initialization_options": {
         "checkOnSave": {
