--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -21,12 +21,6 @@ set -g visual-activity off
 set -g bell-action none
 set -g display-time 1000
 
-# Remap pane movement
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 # Reload config
 bind r source-file ~/.tmux.conf \; display " Config reloaded."
 
@@ -44,9 +38,18 @@ set -gw pane-base-index 1
 # Mouse
 set -gw mouse on
 
-# Mode
-set -gw mode-keys vi
+# Mode style
 set -gw mode-style fg=white,bg=colour238
+
+# Make things feel more like vi
+set -gw mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Status bar
 set -g status on
