tmux: add command to window status

--- a/data/tmux/.tmux.conf
+++ b/data/tmux/.tmux.conf
@@ -6,7 +6,7 @@
 set -g automatic-rename on
 set -g renumber-windows on
 set -g set-titles on
-set -g automatic-rename-format '#{b:pane_current_path}'
+set -g automatic-rename-format '#{b:pane_current_path} [#[italics]#{b:pane_current_command}#[noitalics]]'
 
 # For helix editor
 set -sg escape-time 0
@@ -57,8 +57,8 @@ set -g status-interval 5
 set -g status-style bg=colour232
 set -g status-justify left
 set -g status-position bottom
-setw -g window-status-current-format "#[fg=colour233,bg=colour249] #I #[fg=colour249,bg=colour232] #[fg=colour255]#W "
-setw -g window-status-format "#[fg=colour253,bg=colour239] #I #[fg=colour252,bg=colour232] #W "
+setw -g window-status-current-format "#[fg=colour233,bg=colour249,bold] #I #[fg=colour255,bg=colour232] #W"
+setw -g window-status-format "#[fg=colour253,bg=colour239] #I #[fg=colour252,bg=colour232] #W"
 
 # Left status
 set -g status-left-length 70
